--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -1,16 +1,15 @@
-# Jekyll + Next.js hybrid workflow for GitHub Pages
-name: Deploy jekyll
+name: Deploy Jekyll 
 
 on:
   push:
     branches: ["main"]
   schedule:
-    - cron: '0 5 * * 5'  # Weekly traffic badge updates (Fridays at 5 AM UTC)
+    - cron: '0 5 * * 5'
   workflow_dispatch:
 
+# Permissions for the job token; we still supply ACTION_TOKEN to steps that need write.
 permissions:
-  contents: write
-  pull-requests: write
+  contents: read
   pages: write
   id-token: write
 
@@ -19,16 +18,79 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Build job
-  build:
+  # 1) Make sure package-lock.json matches package.json and open a PR if it doesn't
+  lockfile:
     runs-on: ubuntu-latest
+    env:
+      BRANCH_NAME: chore/update-lockfile
     steps:
-      - name: Checkout
+      - name: Checkout (with PAT)
         uses: actions/checkout@v4
         with:
+          fetch-depth: 0
           token: ${{ secrets.ACTION_TOKEN }}
 
       - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Regenerate package-lock.json
+        run: |
+          set -e
+          test -f package.json || { echo "package.json missing"; exit 1; }
+          rm -rf node_modules package-lock.json
+          npm cache verify
+          npm install --package-lock-only
+          # sanity check the lock
+          rm -rf node_modules
+          npm ci
+
+      - name: Create/Update PR with new lockfile (using PAT)
+        id: cpr
+        uses: peter-evans/create-pull-request@v6
+        with:
+          token: ${{ secrets.ACTION_TOKEN }}
+          branch: ${{ env.BRANCH_NAME }}
+          commit-message: "chore(lock): sync package-lock.json with package.json"
+          title: "chore(lock): sync package-lock.json with package.json"
+          body: |
+            CI regenerated **package-lock.json** from the committed **package.json**.
+            If checks pass, merge this PR to keep the lockfile in sync.
+          labels: dependencies
+          delete-branch: false
+          draft: false
+
+      - name: Stop if PR was created/updated
+        if: steps.cpr.outputs.pull-request-operation != ''
+        run: |
+          echo "Lockfile changed; PR ${{
+            steps.cpr.outputs.pull-request-number
+          }} opened/updated at ${{
+            steps.cpr.outputs.pull-request-url
+          }}. Merge it, then the build will run on main."
+          exit 0
+
+  # 2) Build only after changes are on main (i.e., after you merge the PR)
+  build:
+    if: github.ref == 'refs/heads/main'
+    needs: lockfile
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout (read-only is fine)
+        uses: actions/checkout@v4
+
+      - name: Detect Node/Next presence
+        run: |
+          needs_node=false
+          next_enabled=false
+          if [ -f package.json ] || [ -f package-lock.json ]; then needs_node=true; fi
+          if [ -d "pages" ] || [ -d "components" ] || [ -f "next.config.js" ]; then next_enabled=true; fi
+          echo "NEEDS_NODE=$needs_node" >> "$GITHUB_ENV"
+          echo "NEXT_JS_ENABLED=$next_enabled" >> "$GITHUB_ENV"
+
+      - name: Setup Node.js
+        if: env.NEEDS_NODE == 'true'
         uses: actions/setup-node@v4
         with:
           node-version: '20'
@@ -36,58 +98,14 @@ jobs:
           cache-dependency-path: |
             package.json
             package-lock.json
-        continue-on-error: false
 
-      - name: Setup Next.js if components exist
-        run: |
-          if [ -d "pages" ] || [ -d "components" ] || [ -f "next.config.js" ]; then
-            echo "Next.js components detected, ensuring proper setup..."
+      - name: Install deps
+        if: env.NEEDS_NODE == 'true'
+        run: npm ci
 
-            if [ ! -f package.json ]; then
-              echo "Creating package.json for Next.js build..."
-              cat <<EOF > package.json
-              {
-                "name": "hardn-xdr-platform",
-                "version": "1.0.0",
-                "description": "HARDN-XDR Security Platform",
-                "private": true,
-                "scripts": {
-                  "dev": "next dev",
-                  "build": "next build",
-                  "export": "next build && next export",
-                  "start": "next start"
-                },
-                "dependencies": {
-                  "next": "^14.0.4",
-                  "react": "^18.2.0",
-                  "react-dom": "^18.2.0"
-                },
-                "devDependencies": {
-                  "@types/node": "^20.10.0",
-                  "@types/react": "^18.2.42",
-                  "@types/react-dom": "^18.2.17",
-                  "typescript": "^5.3.3"
-                }
-              }
-              EOF
-            fi
-
-            echo "NEXT_JS_ENABLED=true" >> $GITHUB_ENV
-          else
-            echo "No Next.js components found, skipping Next.js setup..."
-            echo "NEXT_JS_ENABLED=false" >> $GITHUB_ENV
-          fi
-
-      - name: Install Node.js dependencies
+      - name: Verify Next CLI
         if: env.NEXT_JS_ENABLED == 'true'
-        run: |
-          echo "Installing Node.js dependencies..."
-          if [ -f "package-lock.json" ]; then
-            npm ci
-          else
-            npm install --no-package-lock
-          fi
-          npx next --version || echo "Next.js version check failed, but continuing..."
+        run: npx --yes next --version
 
       - name: Generate traffic badges
         env:
@@ -95,102 +113,52 @@ jobs:
         run: |
           mkdir -p _site/badges
           VIEW_JSON=$(curl -s -H "Authorization: token ${{ secrets.ACTION_TOKEN }}" \
-            https://api.github.com/repos/${{ github.repository }}/traffic/views || echo '{"count": 0, "uniques": 0}')
+            https://api.github.com/repos/${{ github.repository }}/traffic/views || echo '{"count":0,"uniques":0}')
           CLONE_JSON=$(curl -s -H "Authorization: token ${{ secrets.ACTION_TOKEN }}" \
-            https://api.github.com/repos/${{ github.repository }}/traffic/clones || echo '{"count": 0, "uniques": 0}')
-          VIEW_COUNT=$(echo "$VIEW_JSON" | jq -r '.count // 0')
-          VIEW_UNIQUES=$(echo "$VIEW_JSON" | jq -r '.uniques // 0')
-          CLONE_COUNT=$(echo "$CLONE_JSON" | jq -r '.count // 0')
-          CLONE_UNIQUES=$(echo "$CLONE_JSON" | jq -r '.uniques // 0')
-          if [ "$VIEW_COUNT" -ge 200 ]; then VIEW_COLOR="green"
-          elif [ "$VIEW_COUNT" -ge 50 ]; then VIEW_COLOR="orange"
-          else VIEW_COLOR="red"
-          fi
-          if [ "$CLONE_COUNT" -ge 100 ]; then CLONE_COLOR="blue"
-          elif [ "$CLONE_COUNT" -ge 20 ]; then CLONE_COLOR="yellow"
-          else CLONE_COLOR="red"
-          fi
-          cat <<EOF > _site/badges/traffic-views.json
-          {
-            "schemaVersion": 1,
-            "label": "views",
-            "message": "$VIEW_COUNT / $VIEW_UNIQUES",
-            "color": "$VIEW_COLOR"
-          }
+            https://api.github.com/repos/${{ github.repository }}/traffic/clones || echo '{"count":0,"uniques":0}')
+          VIEW_COUNT=$(echo "$VIEW_JSON" | jq -r '.count // 0'); VIEW_UNIQUES=$(echo "$VIEW_JSON" | jq -r '.uniques // 0')
+          CLONE_COUNT=$(echo "$CLONE_JSON" | jq -r '.count // 0'); CLONE_UNIQUES=$(echo "$CLONE_JSON" | jq -r '.uniques // 0')
+          if [ "$VIEW_COUNT" -ge 200 ]; then VIEW_COLOR="green"; elif [ "$VIEW_COUNT" -ge 50 ]; then VIEW_COLOR="orange"; else VIEW_COLOR="red"; fi
+          if [ "$CLONE_COUNT" -ge 100 ]; then CLONE_COLOR="blue"; elif [ "$CLONE_COUNT" -ge 20 ]; then CLONE_COLOR="yellow"; else CLONE_COLOR="red"; fi
+          cat > _site/badges/traffic-views.json <<EOF
+          { "schemaVersion":1,"label":"views","message":"$VIEW_COUNT / $VIEW_UNIQUES","color":"$VIEW_COLOR" }
           EOF
-          cat <<EOF > _site/badges/traffic-clones.json
-          {
-            "schemaVersion": 1,
-            "label": "clones", 
-            "message": "$CLONE_COUNT / $CLONE_UNIQUES",
-            "color": "$CLONE_COLOR"
-          }
+          cat > _site/badges/traffic-clones.json <<EOF
+          { "schemaVersion":1,"label":"clones","message":"$CLONE_COUNT / $CLONE_UNIQUES","color":"$CLONE_COLOR" }
           EOF
 
-      - name: Build Next.js components
+      - name: Build Next.js (static export)
+        id: nextexport
         if: env.NEXT_JS_ENABLED == 'true'
         run: |
-          echo "Building Next.js components..."
-          if npm run export; then
-            echo "Next.js build successful"
-            if [ -d "out" ]; then
-              mkdir -p _site
-              cp -r out/* _site/ || true
-              touch _site/.nojekyll
-            fi
-          else
-            echo "Next.js build failed, continuing with Jekyll only..."
-            echo "NEXT_JS_BUILD_FAILED=true" >> $GITHUB_ENV
-          fi
+          set -e
+          npm run export
+          mkdir -p _site
+          cp -r out/* _site/ || true
+          touch _site/.nojekyll
+          echo "exported=true" >> "$GITHUB_OUTPUT"
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
       - name: Build with Jekyll
-        if: env.NEXT_JS_ENABLED == 'false' || env.NEXT_JS_BUILD_FAILED == 'true'
+        if: steps.nextexport.outputs.exported != 'true'
         uses: actions/jekyll-build-pages@v1
         with:
           source: ./
           destination: ./_site
 
-      - name: Skip Jekyll (using Next.js static export)
-        if: env.NEXT_JS_ENABLED == 'true' && env.NEXT_JS_BUILD_FAILED != 'true'
-        run: echo "Using Next.js static export instead of Jekyll build"
-
-      - name: Post-process site
-        run: |
-          mkdir -p _site/badges
-          if [ -d "assets/next" ]; then
-            cp -r assets/next/* _site/ || true
-          fi
-          echo "Site build completed"
-          ls -la _site/
-
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
-      - name: Create Pull Request with updated lockfile
-        uses: peter-evans/create-pull-request@v6
-        with:
-          token: ${{ secrets.ACTION_TOKEN }}
-          branch: chore/update-lockfile
-          commit-message: chore(lock): sync package-lock.json
-          title: chore(lock): sync package-lock.json with package.json
-          body: This PR updates **package-lock.json** to match **package.json**.  
-                Generated automatically by CI.
-          labels: dependencies
-          committer: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
-          author: OpenSource-For-Freedom <92951498+OpenSource-For-Freedom@users.noreply.github.com>
-          signoff: false
-          draft: false
-
-  # Deployment job
+  # 3) Deploy when main is built
   deploy:
+    needs: build
+    if: github.ref == 'refs/heads/main'
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
